--- a/app/components/bpmn-viewer/index.hbs
+++ b/app/components/bpmn-viewer/index.hbs
@@ -3,7 +3,10 @@
     Er ging iets mis tijdens het visualiseren van het diagram.
   </AuAlert>
 {{else}}
-
+  <AuHelpText @skin="tertiary" class="au-u-margin-top-none">
+    Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel om in
+    en uit te zoomen. Klik elders om bediening uit te schakelen.
+  </AuHelpText>
   <div
     class="bpmn-container au-u-margin-top-small"
     {{this.bpmnViewer
