--- a/app/components/bpmn-viewer/index.hbs
+++ b/app/components/bpmn-viewer/index.hbs
@@ -1,15 +1,11 @@
 {{#if this.hasError}}
-  <AuAlert
-    @title="Weergavefout"
-    @skin="warning"
-    @icon="alert-triangle"
-  >
+  <AuAlert @title="Weergavefout" @skin="warning" @icon="alert-triangle">
     Er ging iets mis tijdens het visualiseren van het diagram.
   </AuAlert>
 {{else}}
   <AuHelpText @skin="tertiary" class="au-u-margin-top-none">
-    Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel
-    om in en uit te zoomen. Klik elders om bediening uit te schakelen.
+    Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel om in
+    en uit te zoomen. Klik elders om bediening uit te schakelen.
   </AuHelpText>
   <div
     class="bpmn-container au-u-margin-top-small"
