make relevant-for selector only accessible for uploader

--- a/app/components/process/details-card.hbs
+++ b/app/components/process/details-card.hbs
@@ -112,6 +112,7 @@
                 <Process::RelevantAdminUnitSelector
                   @selected={{@process.relevantAdministrativeUnits}}
                   @onChange={{this.setRelevantAdministrativeUnit}}
+                  @disabled={{not @canEdit}}
                 />
               </:content>
             </Item>
