--- a/app/components/process/relevant-admin-unit-selector.hbs
+++ b/app/components/process/relevant-admin-unit-selector.hbs
@@ -6,6 +6,7 @@
     @selected={{@selected}}
     @onChange={{@onChange}}
     @triggerId={{@id}}
+    @disabled={{@disabled}}
     as |unit|
   >
     {{unit.label}}
