--- a/app/components/pdf-viewer/index.hbs
+++ b/app/components/pdf-viewer/index.hbs
@@ -23,8 +23,16 @@
     {{else}}
       <AuButtonGroup
         @inline="true"
-        class="pdf-navigation au-u-padding au-u-padding-small"
+        class="diagram-navigation au-u-padding au-u-padding-small"
       >
+        <AuButton @skin="secondary" @icon="add" {{on "click" this.zoomIn}} />
+        <AuButton
+          @skin="secondary"
+          @icon="remove"
+          class="au-u-margin-right-small"
+          {{on "click" this.zoomOut}}
+        />
+
         <AuButton
           @icon="chevron-left"
           @iconAlignment="left"
@@ -49,10 +57,7 @@
           Volgende
         </AuButton>
       </AuButtonGroup>
+
     {{/if}}
   </div>
-  <AuButtonGroup class="au-u-flex au-u-flex--center au-u-margin-top-small">
-    <AuButton @skin="secondary" @icon="add" {{on "click" this.zoomIn}} />
-    <AuButton @skin="secondary" @icon="remove" {{on "click" this.zoomOut}} />
-  </AuButtonGroup>
 {{/if}}
