--- a/app/components/process/diagram/visual.hbs
+++ b/app/components/process/diagram/visual.hbs
@@ -101,6 +101,7 @@
       @updateProcess={{this.addFileToProcess}}
       @extractBpmnElements={{this.extractBpmnElements}}
       @onFinishUpload={{this.diagramUploaded}}
+      @onPiiDetected={{this.setPiiState}}
     />
   </:body>
   <:footer>
@@ -109,6 +110,9 @@
         @skin="naked"
         {{on "click" this.closeReplaceModal}}
       >Annuleer</AuButton>
+      {{#if this.hasPiiResults}}
+        <AuButton>Geselecteerde informatie anonimiseren</AuButton>
+      {{/if}}
     </AuButtonGroup>
   </:footer>
 </AuModal>
