--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -133,6 +133,10 @@
       @extractBpmnElements={{this.extractBpmnElements}}
       @onFinishUpload={{this.diagramUploaded}}
       @onPiiDetected={{this.setPiiState}}
+      @piiResults={{this.piiResults}}
+      @piiToAnonymize={{this.piiToAnonymize}}
+      @onPiiSelectionChange={{this.handlePiiSelection}}
+      @fileHasPii={{this.fileHasPii}}
     />
   </:body>
   <:footer>
@@ -141,10 +145,10 @@
         @skin="secondary"
         {{on "click" this.closeUploadModal}}
       >Annuleer</AuButton>
-      {{#if this.hasPiiResults}}
+      {{#if this.fileHasPii}}
         <AuButton
           @skin="primary"
-          {{on "click" this.handlePiiAnonymization}}
+          {{on "click" this.handleAnonymization}}
         >Geselecteerde informatie anonimiseren</AuButton>
       {{/if}}
     </AuButtonGroup>
