styling and removing logs

--- a/app/components/bpmn-viewer/index.hbs
+++ b/app/components/bpmn-viewer/index.hbs
@@ -8,7 +8,7 @@
     uit te zoomen. Klik elders om bediening uit te schakelen.
   </AuHelpText>
   <div
-    class="bpmn-container au-u-margin-top-small"
+    class="bpmn-container au-u-margin-top-small {{@modalClass}}"
     {{this.bpmnViewer
       diagram=@diagram
       onBpmnLoaded=@onBpmnLoaded
