--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -13,7 +13,7 @@
   </:sidebar>
   <:content>
     <PageHeader>
-      <:title>Inventaris</:title>
+      <:title>Inventaris processen Lokale Besturen</:title>
       <:subtitle>
         <AuLinkExternal href="https://abb-vlaanderen.gitbook.io/informatie-oph">
           Handleiding Open Proces Huis
