Add inventory tab

--- a/app/components/process-bar.hbs
+++ b/app/components/process-bar.hbs
@@ -17,6 +17,11 @@
             Gedeelde processen
           </AuLink>
         </Tab>
+        <Tab>
+          <AuLink @route="inventory" @icon="folder">
+            Inventaris processen
+          </AuLink>
+        </Tab>
       {{/if}}
     </AuTabs>
   </Group>
