Show process navigation bar only when authenticated

--- a/app/templates/inventory.hbs
+++ b/app/templates/inventory.hbs
@@ -3,7 +3,9 @@
 
 <div class="au-c-body-container au-c-body-container--scroll">
   <NavigationBar />
-  <ProcessBar />
-  
+  {{#if this.currentSession.isAuthenticated}}
+    <ProcessBar />
+  {{/if}}
+
   {{outlet}}
 </div>
