Add custom pagination

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -28,6 +28,11 @@
     @setIsEditing={{this.setIsEditingDetails}}
   />
 
+  <Process::InventoryProcessCard
+    @canEdit={{this.canEdit}}
+    @process={{this.process}}
+  />
+
   <Process::Diagram::Visual
     @canEdit={{this.canEdit}}
     @process={{this.process}}
