--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -35,7 +35,10 @@
     </:card>
   </DataCard>
 
-  <Process::InventoryProcessCard::Popup />
+  <Process::InventoryProcessCard::Popup
+    @openModal={{this.conceptModalOpened}}
+    @onClose={{this.closeConceptModal}}
+  />
 
 {{else}}
   <DataCard>
